v4.2.0 (2018-XX-XX)
-------------------
[new] Added TVP support for msnodesqlv8 driver
[new] Added support for information messages in msnodesqlv8 driver
[fix] Fixed Tedious deprecation warnings
[fix] Fixed ResourceRequest timed out error
[fix] All query and batch methods now have the same interface
[fix] Fixed msnodesqlv8 issue where the encrypt option was getting ignored
[change] Updated to latest Tedious 2.3.1

v4.1.0 (2017-09-29)
-------------------
[new] Adding support for the MultiSubnetFailover option in connection strings (Paul Kehrer)
[new] Add request timeout support for msnodesqlv8 queries (Michael Parque)
[fix] Fix type inference of non-integer numbers (Andrew Crites)
[fix] Set acquireTimeout on generic pool (Karl Wiggisser)

v4.0.4 (2017-04-25)
-------------------
[fix] Fix auto-closing of idle connections

v4.0.3 (2017-04-25)
-------------------
[fix] Fixed broken CLI & debugging

v4.0.2 (2017-04-19)
-------------------
[fix] Fixed broken JSON parser

v4.0.1 (2017-04-02)
-------------------
[fix] Fixed stream in pipe mode

v4.0.0 (2017-04-01)
-------------------
[new] Completly rewritten to ES6
[new] Library is now compatible with Webpack
[new] Library is ready for async/await
[change] Removed support for < Node.js 4
[change] Removed support for outdated node-tds and msnodesql drivers
[change] Removed require('mssql/nofix') syntax
[change] Removed verbose and debug mode
[change] Removed 'driver' from options
[change] Removed Transaction and Prepared Statement queues
[change] Removed 'multiple' directive
[change] Connection renamed to ConnectionPool
[change] Updated to latest Tedious 2.0.0

v3.3.0 (2016-05-06)
-------------------
[new] Added support for receiving informational messages
[new] Added JSON support for msnodesql and msnodesqlv8 drivers
[fix] Minor fixes in connection string parsing

v3.2.1 (2016-04-16)
-------------------
[fix] Added PreparedStatement.lastRequest to access internal Request when using Promises

v3.2.0 (2016-04-11)