@@ -313,6 +313,12 @@ class Request extends base.Request {
         if (!err) {
           debug('connection(%d): borrowed to request #%d', IDS.get(connection), IDS.get(this))
 
+          if (this.canceled) {
+            debug('request(%d): canceled', IDS.get(this))
+            this.parent.release(connection)
+            return callback(new base.RequestError('Canceled.', 'ECANCEL'))
+          }
+
           const done = (err, rowCount) => {
             if (err) {
               if ((typeof err.sqlstate === 'string') && (err.sqlstate.toLowerCase() === '08s01')) {
@@ -429,6 +435,12 @@ class Request extends base.Request {
 
         debug('connection(%d): borrowed to request #%d', IDS.get(connection), IDS.get(this))
 
+        if (this.canceled) {
+          debug('request(%d): canceled', IDS.get(this))
+          this.parent.release(connection)
+          return callback(new base.RequestError('Canceled.', 'ECANCEL'))
+        }
+
         const params = []
         for (let name in this.parameters) {
           let param = this.parameters[name]
@@ -443,6 +455,14 @@ class Request extends base.Request {
           query_str: command,
           query_timeout: config.requestTimeout / 1000 // msnodesqlv8 timeouts are in seconds (<1 second not supported)
         }, params)
+
+        this._cancel = () => {
+          debug('request(%d): cancel', IDS.get(this))
+          req.cancelQuery(err => {
+            if (err) debug('request(%d): failed to cancel', IDS.get(this), err)
+          })
+        }
+
         req.on('meta', metadata => {
           if (row) {
             if (isChunkedRecordset) {
@@ -570,7 +590,9 @@ class Request extends base.Request {
 
           err = new base.RequestError(err)
           err.code = 'EREQUEST'
+          err.state = err.sqlstate
 
+          delete this._cancel
           this.parent.release(connection)
 
           debug('request(%d): failed', IDS.get(this), err)
@@ -626,6 +648,7 @@ class Request extends base.Request {
             }
           }
 
+          delete this._cancel
           this.parent.release(connection)
 
           debug('request(%d): completed', IDS.get(this))
@@ -712,14 +735,6 @@ class Request extends base.Request {
         }
       })
     })
-  }
-
-  /*
-  Cancel currently executed request.
-  */
-
-  cancel () {
-    return false // Request canceling is not implemented by msnodesql driver.
   }
 }
 
