@@ -466,7 +466,7 @@ class Request extends base.Request {
             errors.push(err)
           }
 
-          this._cancel = null
+          delete this._cancel
 
           let error
           if (errors.length && !this.stream) {
@@ -621,7 +621,7 @@ class Request extends base.Request {
             }
           }
 
-          this._cancel = null
+          delete this._cancel
 
           let error
           if (errors.length && !this.stream) {
@@ -912,7 +912,7 @@ class Request extends base.Request {
             errors.push(err)
           }
 
-          this._cancel = null
+          delete this._cancel
 
           let error
           if (errors.length && !this.stream) {
